tests/snapshots/examples_fixtures/generics__failing__degraded__ki_098_despecialised_two_instantiations.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/degraded/ki_098_despecialised_two_instantiations.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
